# vault-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_GUIDE.md  README.md  pyproject.toml  vault-agent.spec
.ai/specs/: auto-link-wikilinks.md  color-aware-zotero-notes.md  swagger-api-docs.md  zotero-filters-and-search.md  zotero-only-cleanup.md
.claude/: settings.json
.claude/hooks/: prettier-post-edit.sh
.claude/skills/: commit-push-pr
.github/workflows/: build-desktop.yml  test.yml
scripts/: build-sidecar.sh
src/: __main__.py  config.py  logging_config.py  models.py  server.py  store.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/agent/: agent.py  changeset.py  diff.py  prompts.py  tools.py  utils.py  wikify.py
src/clawdy/: git.py  service.py
src/db/: __init__.py  batch_jobs.py  changesets.py  migration.py  settings.py
src/migration/: migrator.py  prompts.py  registry.py  taxonomy.py  writer.py
src/models/: __init__.py  changesets.py  content.py  highlights.py  migration.py  search.py  tools.py  vault.py  zotero.py
src/rag/: chunker.py  embedder.py  indexer.py  search.py  store.py
src/vault/: __init__.py  reader.py  taxonomy.py  writer.py
src/zotero/: background.py  client.py  orchestrator.py  sync.py
test-highlights/: highlights.json
tests/: conftest.py  factories.py
tests/e2e/: mock-api.ts  package.json  playwright.config.ts
tests/integration/: conftest.py  test_changeset_apply.py  test_clawdy_apply.py  test_clawdy_routes.py  test_server_routes.py  (+3 more)
ui/: index.html  package.json  vite.config.ts
(+97 files in other folders)
