[project]
name = "vault-agent"
version = "0.1.0"
description = "FastAPI server that integrates web/PDF highlights into an Obsidian vault using Claude"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "anthropic",
    "python-frontmatter",
    "python-dotenv",
    "pyzotero",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "coverage[toml]>=7.0",
    "pytest-cov>=5.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["if __name__", "pragma: no cover"]
